--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         
     </header>
     <main>
-        <p>Email: <a href="ankitkumar_jaysawal@srmap.edu.in">ankitkumar_jaysawal@srmap.edu.in</a></p>
+        <p>Email: <a href="contact@ankitkumarjaysawal.com.np">contact@ankitkumarjaysawal.com.np</a></p>
         <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">Your LinkedIn</a></p>
         <p>GitHub: <a href="https://github.com/yourprofile">Your GitHub</a></p>
     </main>
