--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <main>
         <h1>Introduction</h1>
         <p>Hello! This is my personal homepage where you can learn more about me, my projects, and how to get in touch.</p>
+        <div class="team-image">
+                <img src="ankit jaiswal.jpg" alt="Ankit">
+            </div>
+
     </main>
     <footer>
         <p>&copy; 2025 Your Ankit Jaiswal. All rights reserved.</p>
