--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             </ul>
         </nav>
     </header>
+    <div class="ankit1">
+        <img src="ankit jaiswal.jpg" alt="ankit">
+    </div>
     <main>
         <h1>Introduction</h1>
         <p>Hello! This is my personal homepage where you can learn more about me, my projects, and how to get in touch.</p>
