--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <h2>Ankit Jaiswal</h2>
-        <img src="C:\Users\Kamal G\OneDrive\Desktop\coding\snake game\lab\ankit jaiswal.jpg" alt="Profile Picture" style="width: 25; height: 50mm;">
+        <img src="ankit jaiswal.jpg" alt="Profile Picture" style="width: 25; height: 50mm;">
         <p>I am a 2nd-year CSE student at SRM University AP. I love coding and enjoy learning new technologies.</p>
         <h3>Hobbies</h3>
         <ul>
