--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="projects.html">My Projects</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
                 <li><a href="resume.html">My Resume</a></li>
+                <li><a href="table1.html">Table Number 1</a></li>
             </ul>
         </nav>
     </header>
